# tree-sitter-yap

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  binding.gyp  grammar.js  package.json  prolog-ts-mode.el  yap-ts-mode.el
bindings/node/: binding.cc
bindings/rust/: lib.rs
examples/: example1.pl
grammar/: highlight.scm  yap.cson
queries/: highlights.scm  tags.scm
settings/: language-yap.cson
src/: grammar.json  node-types.json  parser.c
