[package]
name = "tree-sitter-yap"
description = "Prolog grammar for the tree-sitter parsing library"
version = "0.0.1"
keywords = ["incremental", "parsing", "prolog"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/vscosta/tree-sitter-yap"
edition = "2018"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "0.20.8"

[build-dependencies]
cc = "1.0"
